add theme and article

--- a/Website/output/authors.html
+++ b/Website/output/authors.html
@@ -37,6 +37,7 @@
               <ul class="columns">
                 <li><a href="./">Home</a></li>
 
+                <li><a href="./pages/consulting.html">Consulting</a></li>
                 <li><a href="./pages/about.html">About</a></li>
 
               </ul>
@@ -44,7 +45,7 @@
 
     <h1>Authors on Rachel Ehlers</h1>
 
-    <ul>        <li><a href="./author/rachel-ehlers.html">Rachel Ehlers</a> (1)</li>
+    <ul>        <li><a href="./author/rachel-ehlers.html">Rachel Ehlers</a> (2)</li>
     </ul>
 
        </div><!-- /.row -->
