--- a/Website/output/pages/about.html
+++ b/Website/output/pages/about.html
@@ -37,6 +37,7 @@
               <ul class="columns">
                 <li><a href="../">Home</a></li>
 
+                <li><a href="../pages/consulting.html">Consulting</a></li>
                 <li class="active"><a href="../pages/about.html">About</a></li>
 
               </ul>
