--- a/Website/output/pages/consulting.html
+++ b/Website/output/pages/consulting.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
 
-        <title>Rachel Ehlers</title>
+        <title>Consulting</title>
         <meta charset="utf-8" />
 
 
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
         <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" type="text/css" href="./theme/gumby.css" />
-        <link rel="stylesheet" type="text/css" href="./theme/style.css" />
-        <link rel="stylesheet" type="text/css" href="./theme/pygment.css" />
+        <link rel="stylesheet" type="text/css" href="../theme/gumby.css" />
+        <link rel="stylesheet" type="text/css" href="../theme/style.css" />
+        <link rel="stylesheet" type="text/css" href="../theme/pygment.css" />
 
-        <script src="./theme/js/libs/modernizr-2.6.2.min.js"></script>
+        <script src="../theme/js/libs/modernizr-2.6.2.min.js"></script>
 
 
 
@@ -28,25 +28,38 @@
         <div class="row">
 
           <header id="banner" class="body">
-                  <h1><a href="./">Rachel Ehlers <strong></strong></a></h1>
+                  <h1><a href="../">Rachel Ehlers <strong></strong></a></h1>
           </header><!-- /#banner -->
 
             <div id="navigation" class="navbar row">
               <a href="#" gumby-trigger="#navigation &gt; ul" class="toggle"><i class="icon-menu"></i></a>
              
               <ul class="columns">
-                <li><a href="./">Home</a></li>
+                <li><a href="../">Home</a></li>
 
-                <li><a href="./pages/consulting.html">Consulting</a></li>
-                <li><a href="./pages/about.html">About</a></li>
+                <li class="active"><a href="../pages/consulting.html">Consulting</a></li>
+                <li><a href="../pages/about.html">About</a></li>
 
               </ul>
             </div>
 
-<ul>
-    <li><a href="./category/social-trends.html">Social Trends</a></li>
-    <li><a href="./category/sports.html">Sports</a></li>
-</ul>
+    <h1>Consulting</h1>
+    
+
+    <p>This page is intended for professional contact. For other messages, please email me at ADD CASUAL EMAIL</p>
+<p>Services include, but are not limited to, the following:
+-Applied mathematics
+-Custom software development
+-
+-Statistical analysis
+-API 
+-Website analytics
+-Web scraping
+-Technical writing</p>
+<p>To smooth the process, I ask that you provide some information. Please complete the form below to the best of your ability. I will promptly review and respond to each request.</p>
+<p>negotiable pay range
+duration
+proposed rate</p>
 
        </div><!-- /.row -->
     </div><!-- /.container -->
@@ -83,8 +96,8 @@
     </div>
 
 
-  <script src="./theme/js/libs/jquery-1.9.1.min.js"></script>
-  <script src="./theme/js/libs/gumby.min.js"></script>
-  <script src="./theme/js/plugins.js"></script>
+  <script src="../theme/js/libs/jquery-1.9.1.min.js"></script>
+  <script src="../theme/js/libs/gumby.min.js"></script>
+  <script src="../theme/js/plugins.js"></script>
 </body>
 </html>
