--- a/Website/output/archives.html
+++ b/Website/output/archives.html
@@ -37,6 +37,7 @@
               <ul class="columns">
                 <li><a href="./">Home</a></li>
 
+                <li><a href="./pages/consulting.html">Consulting</a></li>
                 <li><a href="./pages/about.html">About</a></li>
 
               </ul>
@@ -45,6 +46,8 @@
 <h1>Archives for Rachel Ehlers</h1>
 
 <dl>
+    <dt>Mon 18 December 2017</dt>
+    <dd><a href="./Hazing Deaths.html">Deadly Brotherhoods- Hazing Deaths in the United States</a></dd>
     <dt>Tue 12 December 2017</dt>
     <dd><a href="./FBS salaries.html">FBS Football Coach Salaries</a></dd>
 </dl>
