--- a/Website/output/pages/about.html
+++ b/Website/output/pages/about.html
@@ -46,7 +46,11 @@
     <h1>About</h1>
     
 
-    <p>I'm mysterious for now. </p>
+    <p>Hi, name is Rachel Ehlers, and I'm a mathematician from Montana. I grew up on my family farm in northern Montana and went to high school in a town called Sunburst (population &lt; 500). I graduated from the University of Montana in May 2017. My accreditations include:
+-B.A. in Mathematics, Statistics option (with Honors)
+-Minor in Economics
+-Certificate in Big Data Analytics</p>
+<p>Aside from mathematics and data science, my passions include music, art, film, and my dog, Dali.</p>
 <p>For consulting inquiries: please complete the form on my [Consulting] page. </p>
 <p>For anything else worth talking about, email me at ADD CASUAL EMAIL
 Suggestions include, but are not limited to: </p>
