--- a/Website/output/pages/consulting.html
+++ b/Website/output/pages/consulting.html
@@ -46,13 +46,56 @@
     <h1>Consulting</h1>
     
 
-    <p>This page is intended for professional contact. For other messages, please email me at ADD CASUAL EMAIL</p>
+    <p>Identifying bias 
+Correctly interpreting</p>
+<p>Services</p>
+<h3>General Purpose</h3>
+<ul>
+<li>Automated data structuring and </li>
+</ul>
+<h3>Web Analytics</h3>
+<p>Identifying what works in </p>
+<ul>
+<li>Site traffic </li>
+<li>Fraud detection</li>
+<li>Site optimization based on user experience data</li>
+</ul>
+<h3>Marketing and Advertising</h3>
+<p>I have a year of industry experience analyzing multi-channel advertising campaigns</p>
+<h2>- Optimization of campaigns</h2>
+<h3>Development</h3>
+<ul>
+<li>API</li>
+<li>Database design and management</li>
+<li>Automation of data collection, cleaning, and structuring</li>
+<li></li>
+<li>
+<p>Machine learning algorithm design</p>
+</li>
+<li>Marketing and advertising analytics</li>
+<li>API development</li>
+<li>Database design</li>
+<li>Website traffic analytics</li>
+<li>Medical data analysis</li>
+<li>Hypothesis testing</li>
+<li>Technical writing</li>
+<li>Experimental design in accordance with the scientific method</li>
+</ul>
+<h4>Scientific Research</h4>
+<p><strong>Predicting Post-Traumatic Epilepsy in Patients with Traumatic Brain Injuries (University of Montana Big Data Projects Course, partnered with N-Site LLC)</strong></p>
+<p>I was one of a team of 3 University of Montana mathematics students tasked with analyzing electroencephalogram data from patients diagnosed with traumatic brain injuries. A number of these patients went on to develop post-traumatic epilepsy. We performed exploratory analysis formed predictive models for PTE and </p>
+<p>A summary of our methods and results can be found on pages 13-18 of the following link:
+http://mus.edu/research/Funded/Reports/MREDI_Q3_Y2%20Report_Patel.pdf </p>
+<p><strong>Using <em>Chlamydomonas Reinhardtii</em> as a Bioremediation Agent in Water Contaminated by Arsenic</strong></p>
+<p>Over a nine-month period, I designed and implemented an experiment to investigate the use of <em>Chlamydomonas Reinhardtii</em> (a type of algae) in cleaning water contaminated by arsenic. This included conducting background research, experiment design, lab work, data collection, statistical analysis, and hypothesis testing. 
+I was selected as a finalist for the 2013 Intel International Science and Engineering Fair in Phoenix, AZ. There, I presented my research to a panel of judges, competing against students from over 75 countries. The abstract for my experiment can be found on page 143 of the following link.
+http://neohstem.org/assets/pdf/Society%20for%20Science%20&amp;%20the%20Public%20-%20Environmental%20Management.pdf </p>
+<p>This page is intended for professional contact. For other messages, please email me at ADD CASUAL EMAIL</p>
 <p>Services include, but are not limited to, the following:
 -Applied mathematics
--Custom software development
--
+-Web development
 -Statistical analysis
--API 
+-API development
 -Website analytics
 -Web scraping
 -Technical writing</p>
