--- a/Website/output/archives.html
+++ b/Website/output/archives.html
@@ -47,9 +47,7 @@
 
 <dl>
     <dt>Mon 01 January 2018</dt>
-    <dd><a href="./FBS salaries.html">FBS Football Coach Salaries</a></dd>
-    <dt>Mon 18 December 2017</dt>
-    <dd><a href="./Hazing Deaths.html">Deadly Brotherhoods- Hazing Deaths in the United States</a></dd>
+    <dd><a href="./FBS salaries.html">FBS Coach Salaries</a></dd>
 </dl>
 
        </div><!-- /.row -->
