--- a/Website/output/pages/about.html
+++ b/Website/output/pages/about.html
@@ -46,12 +46,11 @@
     <h1>About</h1>
     
 
-    <p>Hi, name is Rachel Ehlers, and I'm a mathematician from Montana. I grew up on my family farm in northern Montana and went to high school in a town called Sunburst (population &lt; 500). I graduated from the University of Montana in May 2017. My accreditations include:
--B.A. in Mathematics, Statistics option (with Honors)
--Minor in Economics
--Certificate in Big Data Analytics</p>
-<p>Aside from mathematics and data science, my passions include music, art, film, and my dog, Dali.</p>
-<p>For consulting inquiries: please complete the form on my [Consulting] page. </p>
+    <p>Hi, my name is Rachel Ehlers. I'm a mathematician from Montana. </p>
+<p>In May I graduated from the University of Montana, earning my bachelor's in mathematics with a focus in statistics, a minor in economics, and a certificate in big data analytics. </p>
+<p>I started this blog to share data science projects, art, and whatever else I feel like talking about. 
+My other interests include music, art, film.</p>
+<p>In my spare time I like to play the piano, spend time at Flathead Lake, and hike with my dog, Dali.</p>
 <p>For anything else worth talking about, email me at ADD CASUAL EMAIL
 Suggestions include, but are not limited to: </p>
 <p>* Semi-serious inquiries will be accepted if accompanied by a link to good music interesting read.</p>
