--- a/output/authors.html
+++ b/output/authors.html
@@ -4,16 +4,17 @@
 
         <title>Rachel Ehlers - Authors</title>
         <meta charset="utf-8" />
+        <link href="http://rachelehlers.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Rachel Ehlers Full Atom Feed" />
 
 
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
         <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" type="text/css" href="./theme/gumby.css" />
-        <link rel="stylesheet" type="text/css" href="./theme/style.css" />
-        <link rel="stylesheet" type="text/css" href="./theme/pygment.css" />
+        <link rel="stylesheet" type="text/css" href="http://rachelehlers.github.io/theme/gumby.css" />
+        <link rel="stylesheet" type="text/css" href="http://rachelehlers.github.io/theme/style.css" />
+        <link rel="stylesheet" type="text/css" href="http://rachelehlers.github.io/theme/pygment.css" />
 
-        <script src="./theme/js/libs/modernizr-2.6.2.min.js"></script>
+        <script src="http://rachelehlers.github.io/theme/js/libs/modernizr-2.6.2.min.js"></script>
 
 
 
@@ -28,24 +29,23 @@
         <div class="row">
 
           <header id="banner" class="body">
-                  <h1><a href="./">Rachel Ehlers <strong></strong></a></h1>
+                  <h1><a href="http://rachelehlers.github.io/">Rachel Ehlers <strong></strong></a></h1>
           </header><!-- /#banner -->
 
             <div id="navigation" class="navbar row">
               <a href="#" gumby-trigger="#navigation &gt; ul" class="toggle"><i class="icon-menu"></i></a>
              
               <ul class="columns">
-                <li><a href="./">Home</a></li>
+                <li><a href="http://rachelehlers.github.io/">Home</a></li>
 
-                <li><a href="./pages/consulting.html">Consulting</a></li>
-                <li><a href="./pages/about.html">About</a></li>
+                <li><a href="http://rachelehlers.github.io/pages/about.html">About</a></li>
 
               </ul>
             </div>
 
     <h1>Authors on Rachel Ehlers</h1>
 
-    <ul>        <li><a href="./author/rachel-ehlers.html">Rachel Ehlers</a> (1)</li>
+    <ul>        <li><a href="http://rachelehlers.github.io/author/rachel-ehlers.html">Rachel Ehlers</a> (1)</li>
     </ul>
 
        </div><!-- /.row -->
@@ -83,8 +83,8 @@
     </div>
 
 
-  <script src="./theme/js/libs/jquery-1.9.1.min.js"></script>
-  <script src="./theme/js/libs/gumby.min.js"></script>
-  <script src="./theme/js/plugins.js"></script>
+  <script src="http://rachelehlers.github.io/theme/js/libs/jquery-1.9.1.min.js"></script>
+  <script src="http://rachelehlers.github.io/theme/js/libs/gumby.min.js"></script>
+  <script src="http://rachelehlers.github.io/theme/js/plugins.js"></script>
 </body>
 </html>
