--- a/output/tags.html
+++ b/output/tags.html
@@ -9,11 +9,11 @@
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
         <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" type="text/css" href="https://rachelehlers11.github.io/theme/gumby.css" />
-        <link rel="stylesheet" type="text/css" href="https://rachelehlers11.github.io/theme/style.css" />
-        <link rel="stylesheet" type="text/css" href="https://rachelehlers11.github.io/theme/pygment.css" />
+        <link rel="stylesheet" type="text/css" href="./theme/gumby.css" />
+        <link rel="stylesheet" type="text/css" href="./theme/style.css" />
+        <link rel="stylesheet" type="text/css" href="./theme/pygment.css" />
 
-        <script src="https://rachelehlers11.github.io/theme/js/libs/modernizr-2.6.2.min.js"></script>
+        <script src="./theme/js/libs/modernizr-2.6.2.min.js"></script>
 
 
 
@@ -28,16 +28,16 @@
         <div class="row">
 
           <header id="banner" class="body">
-                  <h1><a href="https://rachelehlers11.github.io/">Rachel Ehlers <strong></strong></a></h1>
+                  <h1><a href="./">Rachel Ehlers <strong></strong></a></h1>
           </header><!-- /#banner -->
 
             <div id="navigation" class="navbar row">
               <a href="#" gumby-trigger="#navigation &gt; ul" class="toggle"><i class="icon-menu"></i></a>
              
               <ul class="columns">
-                <li><a href="https://rachelehlers11.github.io/">Home</a></li>
+                <li><a href="./">Home</a></li>
 
-                <li><a href="https://rachelehlers11.github.io/pages/about.html">About</a></li>
+                <li><a href="./pages/about.html">About</a></li>
 
               </ul>
             </div>
@@ -82,8 +82,8 @@
     </div>
 
 
-  <script src="https://rachelehlers11.github.io/theme/js/libs/jquery-1.9.1.min.js"></script>
-  <script src="https://rachelehlers11.github.io/theme/js/libs/gumby.min.js"></script>
-  <script src="https://rachelehlers11.github.io/theme/js/plugins.js"></script>
+  <script src="./theme/js/libs/jquery-1.9.1.min.js"></script>
+  <script src="./theme/js/libs/gumby.min.js"></script>
+  <script src="./theme/js/plugins.js"></script>
 </body>
 </html>
