--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -54,8 +54,10 @@
 <li>Big Data Analytics Certificate</li>
 </ul>
 <p>My other interests include music, art, and film. In my spare time I like to play the piano, spend time at Flathead Lake, and hike with my dog, Dali.</p>
-<p>For business: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#114;&#97;&#99;&#104;&#101;&#108;&#101;&#104;&#108;&#101;&#114;&#115;&#46;&#99;&#111;&#109;">&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#114;&#97;&#99;&#104;&#101;&#108;&#101;&#104;&#108;&#101;&#114;&#115;&#46;&#99;&#111;&#109;</a></p>
-<p>For anything else worth talking about: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#105;&#64;&#114;&#97;&#99;&#104;&#101;&#108;&#101;&#104;&#108;&#101;&#114;&#115;&#46;&#99;&#111;&#109;">&#104;&#105;&#64;&#114;&#97;&#99;&#104;&#101;&#108;&#101;&#104;&#108;&#101;&#114;&#115;&#46;&#99;&#111;&#109;</a></p>
+<p>For business: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#97;&#99;&#104;&#101;&#108;&#46;&#101;&#104;&#108;&#101;&#114;&#115;&#49;&#49;&#57;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#114;&#97;&#99;&#104;&#101;&#108;&#46;&#101;&#104;&#108;&#101;&#114;&#115;&#49;&#49;&#57;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
+<p>For anything else worth talking about: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#97;&#99;&#104;&#116;&#104;&#101;&#97;&#110;&#97;&#108;&#121;&#115;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#114;&#97;&#99;&#104;&#116;&#104;&#101;&#97;&#110;&#97;&#108;&#121;&#115;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
+<p>GitHub: <a href="https://github.com/rachelehlers11">https://github.com/rachelehlers11</a>
+Twitter: <a href="https://twitter.com/rachehlers">https://twitter.com/rachehlers</a></p>
 
        </div><!-- /.row -->
     </div><!-- /.container -->
