--- a/output/archives.html
+++ b/output/archives.html
@@ -16,6 +16,16 @@
         <script src="./theme/js/libs/modernizr-2.6.2.min.js"></script>
 
 
+              <script>
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+                ga('create', 'UA-112527021-1', '');
+                ga('send', 'pageview');
+
+              </script>
 
 
 </head>
@@ -74,6 +84,7 @@
 
                 <li><div class="btn primary"><a href="https://github.com/rachelehlers11" target="_blank">Github</a></div></li>
 
+                <li><div class="btn twitter"><a href="https://twitter.com/rachehlers" target="_blank">Twitter</a></div></li>
 
 
 
