changed text fbs

--- a/output/FBS salaries.html
+++ b/output/FBS salaries.html
@@ -93,7 +93,7 @@ Of the Group of Five, three conferences had complete head coach salary data: the
 <h4>Comparing Head Coach Pay to Staff Pay</h4>
 <hr>
 <p>The following plot consists of each school's head coach salary plotted against their staff's salaries totaled. </p>
-<p>For each year from 2014-2017, about 50% of Power Five head coaches made received a salary greater than their 9 assistants' salaries totaled. This was only true for about 5% of schools outside of Power Five conferences each year. </p>
+<p>For each year from 2014-2017, about 50% of Power Five head coaches made a salary greater than their 9 assistants' salaries totaled. This was only true for about 5% of schools outside of Power Five conferences each year. </p>
 <iframe width="800" height="600" frameborder="0" scrolling="no" src="https://plot.ly/~rachehlers/0.embed"></iframe>
 
 <h3>My Methodology</h3>
