--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -56,16 +56,8 @@
     
 
     <p><span style="display:block;text-align:center"><img alt="Alt Text" src="../images/aboutphoto.jpg"></span></p>
-<p>Hi, my name is Rachel Ehlers. I'm a mathematician from Montana. I started this blog to share data science projects and anything else I feel like talking about.</p>
-<p>In May I graduated from the University of Montana, earning my: </p>
-<ul>
-<li>B.A. in Mathematics (Statistics Option)</li>
-<li>Economics minor</li>
-<li>Big Data Analytics Certificate</li>
-</ul>
-<p>My other interests include music, art, and film. In my spare time I like to play the piano, spend time at Flathead Lake, and hike with my dog, Dali.</p>
-<p>For business: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#97;&#99;&#104;&#101;&#108;&#46;&#101;&#104;&#108;&#101;&#114;&#115;&#49;&#49;&#57;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#114;&#97;&#99;&#104;&#101;&#108;&#46;&#101;&#104;&#108;&#101;&#114;&#115;&#49;&#49;&#57;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
-<p>For anything else worth talking about: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#97;&#99;&#104;&#116;&#104;&#101;&#97;&#110;&#97;&#108;&#121;&#115;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#114;&#97;&#99;&#104;&#116;&#104;&#101;&#97;&#110;&#97;&#108;&#121;&#115;&#116;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
+<p>Hi, my name is Rachel Ehlers. I'm a data scientist living in Portland and working at <a href="http://www.swift.co/">Swift</a>, a creative agency. I started this blog to share data science projects and anything else I feel like talking about.</p>
+<p>I graduated from the University of Montana in 2017, earning my B.A. in mathematics with an option in statistics, an economics minor, and a certificate in big data analytics. My other interests include music, art, and film. In my spare time I like to play the piano and run with my dog, Dali.</p>
 <p>GitHub: <a href="https://github.com/rachelehlers11">https://github.com/rachelehlers11</a>
 Twitter: <a href="https://twitter.com/rachehlers">https://twitter.com/rachehlers</a></p>
 
