--- a/output/FBS salaries.html
+++ b/output/FBS salaries.html
@@ -147,6 +147,11 @@ Of the Group of Five, three conferences had complete head coach salary data: the
       <li><a href="./pages/about.html">About</a></li>
   </ul>
 
+<h4>Categories</h4>
+<ul class="blank">
+		<li><a href="./category/google-trends.html">Google Trends</a></li>
+		<li><a href="./category/sports.html">Sports</a></li>
+</ul>
 
 
 
