--- a/output/categories.html
+++ b/output/categories.html
@@ -53,6 +53,7 @@
             </div>
 
 <ul>
+    <li><a href="./category/google-trends.html">Google Trends</a></li>
     <li><a href="./category/sports.html">Sports</a></li>
 </ul>
 
