--- a/output/archives.html
+++ b/output/archives.html
@@ -55,6 +55,8 @@
 <h1>Archives for Rachel Ehlers</h1>
 
 <dl>
+    <dt>Fri 21 September 2018</dt>
+    <dd><a href="./google trends yogurt.html">No Greek Yogurt for Christmas</a></dd>
     <dt>Sun 14 January 2018</dt>
     <dd><a href="./FBS salaries.html">FBS Coach Salaries</a></dd>
 </dl>
